# sheetbridge

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
sheetbridge/: __init__.py  client.py  dataframe.py  polling.py
tests/: test_client.py  test_dataframe.py  test_imports.py  test_polling.py
